<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="your_privacy_is_a_fundamental_right_html" tools:ignore="MissingTranslation">Your privacy is a fundamental human right.</string>
    <string name="you_dont_need_a_vpn_to_use_frostwire_bullet_html" tools:ignore="MissingTranslation"><![CDATA[* Although recommended for your downloads, <b>you do not need a VPN to use FrostWire. </b>]]></string>
    <string name="unprotected_connections_visibility_bullet_html" tools:ignore="MissingTranslation"><![CDATA[ An unprotected connection means everything you do online (including <b>searches, messaging, and downloads</b>) may be monitored by anyone on your network and even by your Internet service provider.<br><br>We recommend using ExpressVPN to encrypt your connection and <b>safeguard your privacy</b>.]]></string>
    <string name="protected_connections_visibility_bullet_html" tools:ignore="MissingTranslation"><![CDATA[ You\'re connected to the Internet using a VPN. <br><br> If you are not already, we recommend using <b>ExpressVPN</b> to encrypt your connection and <b>safeguard your privacy</b>. ]]></string>
    <string name="application_label" tools:ignore="MissingTranslation">FrostWire</string>
    <string name="activity_preferences_name" tools:ignore="MissingTranslation">Settings</string>
    <string name="activity_browse_peer_name" tools:ignore="MissingTranslation">Browse Host</string>
    <string name="activity_browse_peers_name" tools:ignore="MissingTranslation">People Nearby</string>
    <string name="activity_chat_name" tools:ignore="MissingTranslation">Chat</string>
    <string name="activity_downloads_name" tools:ignore="MissingTranslation">Active Downloads</string>
    <string name="activity_uploads_name" tools:ignore="MissingTranslation">Active Uploads</string>
    <string name="activity_about" tools:ignore="MissingTranslation">About</string>
    <string name="activity_debug_name" tools:ignore="MissingTranslation">Debug</string>
    <string name="activity_VPN" tools:ignore="MissingTranslation">Connection</string>
    <string name="disconnected" tools:ignore="MissingTranslation">Disconnected</string>
    <string name="all_transfers_will_stop_are_you_sure" tools:ignore="MissingTranslation">All transfers will stop.\nAre you sure?</string>
    <string name="connect" tools:ignore="MissingTranslation">Connect</string>
    <string name="connecting" tools:ignore="MissingTranslation">Connecting</string>
    <string name="disconnect" tools:ignore="MissingTranslation">Disconnect</string>
    <string name="disconnecting" tools:ignore="MissingTranslation">Disconnecting</string>
    <string name="wait" tools:ignore="MissingTranslation">Wait</string>
    <string name="exit" tools:ignore="MissingTranslation">Exit</string>
    <string name="no_wifi_want_to_fix_it_question" tools:ignore="MissingTranslation">You\'re not connected to a Wi-Fi network.\n\nHow do you want to connect?</string>
    <string name="your_connection_has_dropped_stopping_services" tools:ignore="MissingTranslation">Your Wi-Fi connection has dropped. Stopping services.</string>
    <string name="wifi_network_changed_restarting_services" tools:ignore="MissingTranslation">The Wi-Fi network has changed. Restarting Services.</string>
    <string name="no_network_connection" tools:ignore="MissingTranslation">No Network Connection</string>
    <string name="leaving_already" tools:ignore="MissingTranslation">Leaving Already?</string>
    <string name="search_label" tools:ignore="MissingTranslation">Search</string>
    <string name="settings_description" tools:ignore="MissingTranslation">Search Settings</string>
    <string name="clear_finished" tools:ignore="MissingTranslation">Clear Finished</string>
    <string name="support_free_software" tools:ignore="MissingTranslation">Support Free Software</string>
    <string name="show_love" tools:ignore="MissingTranslation">Love FrostWire?</string>
    <string name="waiting" tools:ignore="MissingTranslation">Waiting…</string>
    <string name="use_icons_to_browse" tools:ignore="MissingTranslation">Use the icons to browse files.</string>
    <string name="type_to_filter_results" tools:ignore="MissingTranslation">Type to filter results.</string>
    <string name="fetching_file_list" tools:ignore="MissingTranslation">Fetching list of shared</string>
    <string name="not_sharing_files" tools:ignore="MissingTranslation">is not sharing any files.</string>
    <string name="browse_peer" tools:ignore="MissingTranslation">Browse Peer</string>
    <string name="peer" tools:ignore="MissingTranslation">Peer</string>
    <string name="peers" tools:ignore="MissingTranslation">Peers</string>
    <string name="copy" tools:ignore="MissingTranslation">Copy</string>
    <string name="audio" tools:ignore="MissingTranslation">Audio</string>
    <string name="audio_music" tools:ignore="MissingTranslation">Audio/Music</string>
    <string name="video" tools:ignore="MissingTranslation">Video</string>
    <string name="application" tools:ignore="MissingTranslation">Application</string>
    <string name="applications" tools:ignore="MissingTranslation">Apps</string>
    <string name="about" tools:ignore="MissingTranslation">About</string>
    <string name="remove_ads" tools:ignore="MissingTranslation">Remove Ads</string>
    <string name="remove_ads_description" tools:ignore="MissingTranslation">Enjoy the ad-free experience, support FrostWire</string>
    <string name="my_files" tools:ignore="MissingTranslation">My Files</string>
    <string name="settings" tools:ignore="MissingTranslation">Settings</string>
    <string name="other_settings" tools:ignore="MissingTranslation">Other Settings</string>
    <string name="vibrate_on_finished_download" tools:ignore="MissingTranslation">Vibrate when download finishes</string>
    <string name="use_mobile_data" tools:ignore="MissingTranslation">Use 3G/4G for BitTorrent</string>
    <string name="use_mobile_data_summary" tools:ignore="MissingTranslation">Use mobile network for BitTorrent downloads. Data Overage charges may apply. Use carefully.</string>
    <string name="search_settings" tools:ignore="MissingTranslation">Search Settings</string>
    <string name="use_tpb" tools:ignore="MissingTranslation">Use TPB</string>
    <string name="use_tpb_summary" tools:ignore="MissingTranslation">TPB is magnet based, works only on Wi-Fi</string>
    <string name="use_monova" tools:ignore="MissingTranslation">Use Monova</string>
    <string name="use_monova_summary" tools:ignore="MissingTranslation">Monova is magnet based, works only on Wi-Fi</string>
    <string name="use_extratorrent" tools:ignore="MissingTranslation">Use ExtraTorrent.com</string>
    <string name="use_mininova" tools:ignore="MissingTranslation">Use Mininova.org</string>
    <string name="use_yify" tools:ignore="MissingTranslation">Use Yify</string>
    <string name="use_yify_summary" tools:ignore="MissingTranslation">Yify is magnet based, works only on Wi-Fi</string>
    <string name="search" tools:ignore="MissingTranslation">Search</string>
    <string name="transfers" tools:ignore="MissingTranslation">Transfers</string>
    <string name="torrent_settings" tools:ignore="MissingTranslation">Torrent Settings</string>
    <string name="torrent_max_download_speed_summary" tools:ignore="MissingTranslation">Max Download Speed (0 means unlimited)</string>
    <string name="torrent_max_download_speed" tools:ignore="MissingTranslation">Max Download Speed</string>
    <string name="torrent_max_upload_speed_summary" tools:ignore="MissingTranslation">Max Upload Speed (0 means unlimited)</string>
    <string name="torrent_max_upload_speed" tools:ignore="MissingTranslation">Max Upload Speed</string>
    <string name="torrent_max_downloads_summary" tools:ignore="MissingTranslation">Max Downloads</string>
    <string name="torrent_max_downloads" tools:ignore="MissingTranslation">Max Downloads</string>
    <string name="torrent_max_uploads_summary" tools:ignore="MissingTranslation">Max Uploads</string>
    <string name="torrent_max_uploads" tools:ignore="MissingTranslation">Max Uploads</string>
    <string name="torrent_max_total_connections_summary" tools:ignore="MissingTranslation">Max Total Connections</string>
    <string name="torrent_max_total_connections" tools:ignore="MissingTranslation">Max Total Connections</string>
    <string name="torrent_max_peers_summary" tools:ignore="MissingTranslation">Max Peers</string>
    <string name="torrent_max_peers" tools:ignore="MissingTranslation">Max Peers</string>
    <string name="seed_finished_torrents" tools:ignore="MissingTranslation">Seed Finished Torrents</string>
    <string name="seed_finished_torrents_summary" tools:ignore="MissingTranslation">Share pieces of torrent downloads with anybody on the internet via BitTorrent</string>
    <string name="seed_finished_torrents_wifi_only" tools:ignore="MissingTranslation">Seed only on Wi-Fi</string>
    <string name="seed_finished_torrents_wifi_only_summary" tools:ignore="MissingTranslation">Seeds only when connected via Wi-Fi to save bandwidth on your data plan</string>
    <string name="show_transfers_on_download_start" tools:ignore="MissingTranslation">Show Transfers On Download Start</string>
    <string name="show_new_transfer_dialog" tools:ignore="MissingTranslation">Show New Transfer dialog</string>
    <string name="clear" tools:ignore="MissingTranslation">Clear</string>
    <string name="storage_preference_title" tools:ignore="MissingTranslation">Select Storage Location</string>
    <string name="storage_preference_summary" tools:ignore="MissingTranslation">The default storage location where files will be saved.</string>
    <string name="bittorrent" tools:ignore="MissingTranslation">BitTorrent</string>
    <string name="bittorrent_network_summary" tools:ignore="MissingTranslation">Connection status</string>
    <string name="use_youtube" tools:ignore="MissingTranslation">Use YouTube.com</string>
    <string name="use_soundcloud" tools:ignore="MissingTranslation">Use Soundcloud.com</string>
    <string name="use_archiveorg" tools:ignore="MissingTranslation">Use Archive.org</string>
    <string name="clear_search_cache" tools:ignore="MissingTranslation">Clear search cache</string>
    <string name="clear_search_cache_summary" tools:ignore="MissingTranslation">Clear search cache entries</string>
    <string name="use_frostclick" tools:ignore="MissingTranslation">Use FrostClick</string>
    <string name="anonymous_usage_statistics" tools:ignore="MissingTranslation">Anonymous Usage Statistics</string>
    <string name="anonymous_usage_statistics_summary" tools:ignore="MissingTranslation">Send anonymous usage statistics. No information that can personally identify you will be stored on disk or sent through the network.</string>
    <string name="use_bitsnoop" tools:ignore="MissingTranslation">Use BitSnoop</string>
    <string name="use_torlock" tools:ignore="MissingTranslation">Use TorLock</string>
    <string name="use_torrentdownloads" tools:ignore="MissingTranslation">Use TorrentDownloads</string>
    <string name="use_eztv" tools:ignore="MissingTranslation">Use Eztv</string>
    <string name="my_music" tools:ignore="MissingTranslation">My Music</string>
    <string name="use_btjunkie" tools:ignore="MissingTranslation">Use BTJunkie</string>
    <string name="enable_dht" tools:ignore="MissingTranslation">Enable DHT</string>
    <string name="enable_dht_summary" tools:ignore="MissingTranslation">Use the Distributed Hash Table to announce/search torrent peers</string>
    <string name="help" tools:ignore="MissingTranslation">Help</string>
    <string name="notify_frostwire_is_running" tools:ignore="MissingTranslation">Notify if FrostWire is running</string>
    <string name="notify_frostwire_is_running_summary" tools:ignore="MissingTranslation">Show a permanent Android notification with status of transfers</string>
</resources>