<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Created by Angel Leon (@gubatron), Alden Torres (aldenml), Marcelina Knitter (@marcelinkaaa)
 * Copyright (c) 2011-2017, FrostWire(R). All rights reserved.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:frostwire="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:key="frostwire.prefs.general"
        android:title="@string/general">
        <SwitchPreference
            android:key="frostwire.prefs.internal.connect_disconnect"
            android:summary="@string/bittorrent_network_summary"
            android:title="@string/bittorrent" />
        <SwitchPreference
            android:key="frostwire.prefs.network.use_mobile_data"
            android:layout="@layout/view_preference_simple_action"
            android:summary="@string/use_mobile_data_summary"
            android:title="@string/use_mobile_data" />
        <!--Switch preference below to replace "frostwire.prefs.network.use_mobile_data" above-->
        <!--<SwitchPreference-->
            <!--android:key="frostwire.prefs.network.use_mobile_data"-->
            <!--android:summary="@string/wifi_networks_only_summary"-->
            <!--android:title="@string/wifi_networks_only" />-->
        <com.frostwire.android.gui.views.preference.StoragePreference
            android:key="frostwire.prefs.storage.path"
            android:summary="@string/storage_preference_summary"
            android:title="@string/storage_preference_title" />
        <Preference
            android:key="frostwire.prefs.storage.path_asf"
            android:summary="@string/storage_preference_summary"
            android:title="@string/storage_preference_title">
            <intent android:action="android.intent.action.OPEN_DOCUMENT_TREE" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/search_torrent_settings">
        <PreferenceScreen
            android:key="frostwire.prefs.search.preference_category"
            android:persistent="false"
            android:title="@string/search_settings">
            <com.frostwire.android.gui.activities.ToggleAllSearchEnginesPreference
                android:key="frostwire.prefs.search.preference_category.select_all"
                android:title="@string/select_deselect_all" />
            <CheckBoxPreference
                android:key="frostwire.prefs.search.use_archiveorg"
                android:layout="@layout/view_preference_simple_action"
                android:title="@string/use_archiveorg" />
            <CheckBoxPreference
                android:key="frostwire.prefs.search.use_bitsnoop"
                android:layout="@layout/view_preference_simple_action"
                android:title="@string/use_bitsnoop" />
            <CheckBoxPreference
                android:key="frostwire.prefs.search.use_btjunkie"
                android:layout="@layout/view_preference_simple_action"
                android:title="@string/use_btjunkie" />
            <CheckBoxPreference
                android:key="frostwire.prefs.search.use_extratorrent"
                android:layout="@layout/view_preference_simple_action"
                android:title="@string/use_extratorrent" />
            <CheckBoxPreference
                android:key="frostwire.prefs.search.use_eztv"
                android:layout="@layout/view_preference_simple_action"
                android:title="@string/use_eztv" />
            <CheckBoxPreference
                android:key="frostwire.prefs.search.use_frostclick"
                android:layout="@layout/view_preference_simple_action"
                android:title="@string/use_frostclick" />
            <CheckBoxPreference
                android:key="frostwire.prefs.search.use_mininova"
                android:layout="@layout/view_preference_simple_action"
                android:title="@string/use_mininova" />
            <CheckBoxPreference
                android:key="frostwire.prefs.search.use_monova"
                android:layout="@layout/view_preference_simple_action"
                android:summary="@string/use_monova_summary"
                android:title="@string/use_monova" />
            <CheckBoxPreference
                android:key="frostwire.prefs.search.use_soundcloud"
                android:layout="@layout/view_preference_simple_action"
                android:title="@string/use_soundcloud" />
            <CheckBoxPreference
                android:key="frostwire.prefs.search.use_tpb"
                android:layout="@layout/view_preference_simple_action"
                android:summary="@string/use_tpb_summary"
                android:title="@string/use_tpb" />
            <CheckBoxPreference
                android:key="frostwire.prefs.search.use_torlock"
                android:layout="@layout/view_preference_simple_action"
                android:title="@string/use_torlock" />
            <CheckBoxPreference
                android:key="frostwire.prefs.search.use_torrentdownloads"
                android:layout="@layout/view_preference_simple_action"
                android:title="@string/use_torrentdownloads" />
            <CheckBoxPreference
                android:key="frostwire.prefs.search.use_limetorrents"
                android:layout="@layout/view_preference_simple_action"
                android:title="@string/use_limetorrents" />
            <CheckBoxPreference
                android:key="frostwire.prefs.search.use_yify"
                android:layout="@layout/view_preference_simple_action"
                android:summary="@string/use_yify_summary"
                android:title="@string/use_yify" />
            <CheckBoxPreference
                android:key="frostwire.prefs.search.use_youtube"
                android:layout="@layout/view_preference_simple_action"
                android:title="@string/use_youtube" />

            <com.frostwire.android.gui.views.preference.ButtonActionPreference
                android:key="frostwire.prefs.internal.clear_index"
                android:summary="@string/clear_search_cache_summary"
                android:title="@string/clear_search_cache"
                frostwire:button_text="@string/clear" />
        </PreferenceScreen>

        <PreferenceScreen
            android:key="frostwire.prefs.torrent.preference_category"
            android:persistent="false"
            android:title="@string/torrent_settings">
            <PreferenceCategory
                android:title="Privacy and sharing">
                <CheckBoxPreference
                    android:key="frostwire.prefs.torrent.seed_finished_torrents"
                    android:summary="@string/seed_finished_torrents_summary"
                    android:title="@string/seed_finished_torrents" />
                <com.frostwire.android.gui.views.preference.CheckBoxSeedingPreference
                    android:key="frostwire.prefs.torrent.seed_finished_torrents_wifi_only"
                    android:summary="@string/seed_finished_torrents_wifi_only_summary"
                    android:title="@string/seed_finished_torrents_wifi_only" />
            </PreferenceCategory>
            <PreferenceCategory
                android:title="Bandwidth and network">
                <SwitchPreference
                    android:key="froswire.prefs.network.enable_dht"
                    android:summary="@string/enable_dht_summary"
                    android:title="@string/enable_dht" />
                <com.frostwire.android.gui.views.preference.NumberPickerPreference
                    android:key="frostwire.prefs.torrent.max_download_speed"
                    android:summary="@string/torrent_max_download_speed_summary"
                    android:title="@string/torrent_max_download_speed"
                    frostwire:picker_defaultValue="0"
                    frostwire:picker_endRange="102400"
                    frostwire:picker_startRange="0" />
                <com.frostwire.android.gui.views.preference.NumberPickerPreference
                    android:key="frostwire.prefs.torrent.max_upload_speed"
                    android:summary="@string/torrent_max_upload_speed_summary"
                    android:title="@string/torrent_max_upload_speed"
                    frostwire:picker_defaultValue="0"
                    frostwire:picker_endRange="102400"
                    frostwire:picker_startRange="0" />
                <com.frostwire.android.gui.views.preference.NumberPickerPreference
                    android:key="frostwire.prefs.torrent.max_downloads"
                    android:summary="@string/torrent_max_downloads_summary"
                    android:title="@string/torrent_max_downloads"
                    frostwire:picker_defaultValue="4"
                    frostwire:picker_endRange="10"
                    frostwire:picker_startRange="1" />
                <com.frostwire.android.gui.views.preference.NumberPickerPreference
                    android:key="frostwire.prefs.torrent.max_uploads"
                    android:summary="@string/torrent_max_uploads_summary"
                    android:title="@string/torrent_max_uploads"
                    frostwire:picker_defaultValue="4"
                    frostwire:picker_endRange="10"
                    frostwire:picker_startRange="1" />
                <com.frostwire.android.gui.views.preference.NumberPickerPreference
                    android:key="frostwire.prefs.torrent.max_total_connections"
                    android:summary="@string/torrent_max_total_connections_summary"
                    android:title="@string/torrent_max_total_connections"
                    frostwire:picker_defaultValue="200"
                    frostwire:picker_endRange="200"
                    frostwire:picker_startRange="10" />
                <com.frostwire.android.gui.views.preference.NumberPickerPreference
                    android:key="frostwire.prefs.torrent.max_peers"
                    android:summary="@string/torrent_max_peers_summary"
                    android:title="@string/torrent_max_peers"
                    frostwire:picker_defaultValue="200"
                    frostwire:picker_endRange="200"
                    frostwire:picker_startRange="10" />
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other_settings">
        <PreferenceScreen
            android:key="frostwire.prefs.other.preference_category"
            android:persistent="false"
            android:title="@string/interface_and_notifications">
            <CheckBoxPreference
                android:key="frostwire.prefs.gui.enable_permanent_status_notification"
                android:layout="@layout/view_preference_simple_action_padding"
                android:summary="@string/notify_frostwire_is_running_summary"
                android:title="@string/notify_frostwire_is_running" />
            <CheckBoxPreference
                android:key="frostwire.prefs.gui.show_transfers_on_download_start"
                android:layout="@layout/view_preference_simple_action"
                android:title="@string/show_transfers_on_download_start" />
            <CheckBoxPreference
                android:key="frostwire.prefs.gui.show_new_transfer_dialog"
                android:layout="@layout/view_preference_simple_action"
                android:title="@string/show_new_transfer_dialog" />
            <CheckBoxPreference
                android:key="frostwire.prefs.gui.vibrate_on_finished_download"
                android:layout="@layout/view_preference_simple_action"
                android:title="@string/vibrate_on_finished_download" />
            <CheckBoxPreference
                android:key="frostwire.prefs.gui.haptic_feedback_on"
                android:layout="@layout/view_preference_simple_action"
                android:title="@string/haptic_feedback" />
            <CheckBoxPreference
                android:key="frostwire.prefs.gui.distraction_free_search"
                android:layout="@layout/view_preference_simple_action"
                android:title="@string/distraction_free_search_results"
                android:summary="@string/distraction_free_search_results_summary"/>
            <CheckBoxPreference
                android:key="frostwire.prefs.uxstats.enabled"
                android:layout="@layout/view_preference_simple_action_padding"
                android:summary="@string/anonymous_usage_statistics_summary"
                android:title="@string/anonymous_usage_statistics" />
        </PreferenceScreen>

        <Preference
            android:key="frostwire.prefs.show_about"
            android:title="@string/about">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.frostwire.android.gui.activities.AboutActivity"
                android:targetPackage="com.frostwire.android" />
        </Preference>
        <Preference
            android:key="frostwire.prefs.offers.buy_no_ads"
            android:summary="@string/remove_ads_description"
            android:title="@string/remove_ads"
            android:layout="@layout/view_preference_buy_ads"/>
    </PreferenceCategory>
</PreferenceScreen>
