<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
 * Copyright (c) 2011-2017, FrostWire(R). All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:summary="@string/bittorrent_network_summary"
        android:title="@string/bittorrent" />
    <!--<com.frostwire.android.gui.views.preference.StoragePreference
        android:summary="@string/storage_preference_summary"
        android:title="@string/storage_preference_title" />-->
    <Preference
        android:summary="@string/storage_preference_summary"
        android:title="@string/storage_preference_title">
        <intent android:action="android.intent.action.OPEN_DOCUMENT_TREE" />
    </Preference>
    <Preference
        android:fragment="com.frostwire.android.gui.activities.SettingsActivity2$Torrent"
        android:title="@string/torrent_settings" />
    <Preference
        android:fragment="com.frostwire.android.gui.activities.SettingsActivity2$Search"
        android:title="@string/search_settings" />
    <Preference
        android:fragment="com.frostwire.android.gui.activities.SettingsActivity2$Other"
        android:title="@string/other_settings" />
    <Preference
        android:summary="@string/remove_ads_description"
        android:title="@string/remove_ads" />
    <Preference android:title="@string/about">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.frostwire.android.gui.activities.AboutActivity"
            android:targetPackage="com.frostwire.android" />
    </Preference>

</PreferenceScreen>
