<!--
    Created by Angel Leon (@gubatron), Alden Torres (aldenml)
    Copyright (c) 2011-2025, FrostWire(R). All rights reserved.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:frostwire="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference
        android:key="frostwire.prefs.gui.enable_permanent_status_notification"
        android:summary="@string/notify_frostwire_is_running_summary"
        android:title="@string/notify_frostwire_is_running" />
    <CheckBoxPreference
        android:key="frostwire.prefs.gui.show_transfers_on_download_start"
        android:title="@string/show_transfers_on_download_start" />
    <CheckBoxPreference
        android:key="frostwire.prefs.gui.show_new_transfer_dialog"
        android:title="@string/show_new_transfer_dialog" />
    <CheckBoxPreference
        android:key="frostwire.prefs.gui.vibrate_on_finished_download"
        android:title="@string/vibrate_on_finished_download" />
    <CheckBoxPreference
        android:key="frostwire.prefs.gui.distraction_free_search"
        android:summary="@string/distraction_free_search_results_summary"
        android:title="@string/distraction_free_search_results" />
    <com.frostwire.android.gui.views.preference.ButtonActionPreference
        android:key="frostwire.prefs.internal.clear_index"
        android:summary="@string/clear_search_cache_summary"
        android:title="@string/clear_search_cache"
        frostwire:button_text="@string/clear" />
</PreferenceScreen>
